# task_allocation_gazebo

./: README.md
gazebo_visual/: README4Formation  TODO
gazebo_visual/src/: CMakeLists.txt
gazebo_visual/src/nubot_description/models/rival2/: model.sdf
gazebo_visual/src/nubot_description/models/rival3/: model.sdf
gazebo_visual/src/nubot_gazebo/scripts/: robot_up.sh
gazebo_visual/src/nubot_gazebo/src/: ball_gazebo.hh  nubot_gazebo.hh
task_allocation/: allocation_result.txt
task_allocation/src/: CMakeLists.txt  cyan_spawn_model.sh  task_allocation.sh
task_allocation/src/nubot/nubot_allocation/: CMakeLists.txt  package.xml
task_allocation/src/nubot/nubot_allocation/cfg/: task_allocation.cfg
task_allocation/src/nubot/nubot_allocation/include/nubot/nubot_allocation/: behaviour.hpp  common.hpp  define.hpp  dribblestate.hpp  subtargets.h  task_allocation.hpp
task_allocation/src/nubot/nubot_allocation/src/: behaviour.cpp  main.cpp  subtargets.cpp  task_allocation.cpp
task_allocation/src/nubot/nubot_coach/: CMakeLists.txt  package.xml
task_allocation/src/nubot/nubot_coach/source/: source.qrc
task_allocation/src/nubot/nubot_coach/src/: coach_dialog.cpp  coach_dialog.ui  main.cpp  robot2coach.cpp
task_allocation/src/nubot/nubot_common/: CMakeLists.txt
task_allocation/src/nubot/nubot_common/msgs/: Allocation_info.msg  CoachInfo.msg  VelCmd.msg
task_allocation/src/nubot/world_model/: CMakeLists.txt
task_allocation/src/nubot/world_model/launch/: world_model.launch
task_allocation/src/nubot/world_model/rtdb/: read.cpp  rtdb_api.cpp  write.cpp
(+12 files in other folders)
